tests/NormalTests/paczka1/fuzzy1/22995527.err
Error in line 7: XbJV7YM A897 1,9
Error in line 5: S184 S429 23,8
Error in line 22: uCXojXMdh S184 95,6
Error in line 25: uCXojXMdh S429 56,3
Error in line 20: PE84vx9Qd9i S429 15,4
Error in line 32: F1Hk0oK S184 52,A
Error in line 28: uCXojXMdh A26 88,1
Error in line 37: S184 A26 93,62
